# labelmaker3

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: .gitignore  Cargo.toml
backend/generator/: app.py
backend/python_app/: app.py
backend/python_app/utils/: label.py
backend/src/: constants.rs  main.rs
backend/src/app/: actions.rs  config.rs  generator.py  generator.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.svelte  app.css  authConfig.js  authConfig.ts  companies.ts  form.css  formHelpers.ts  main.jsx  main.ts  stores.ts
frontend/src/components/: FormatSelector.svelte  GenericForm.svelte  GenericLine.svelte  Header.svelte  LabelForm.svelte  LoadingOverlay.svelte  Login.svelte  LoginButton.svelte  PrintingOptions.svelte  SerialNumberInput.svelte
