[tool.poetry]
name = "labelmaker3"
version = "0.1.0"
description = ""
authors = ["Gray Logan <literal.gray@gmail.com>"]
readme = "README.md"
packages = [{include = "labelmaker3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pylabels = "^1.2.1"
reportlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
