[package]
name = "backend"
version = "3.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.1", features = ["cargo"] }
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rust-ini = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.96"
sqlx = "0.7.3"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
